--- a/circleci/config.yml
+++ b/circleci/config.yml
@@ -1,36 +1,50 @@
-# Python CircleCI 2.0 configuration file
 version: 2
 jobs:
   build:
     docker:
-      - image: circleci/python:3.7
+      - image: circleci/python:3.10
 
     working_directory: ~/repo
 
     steps:
-      # Step 1: obtenemos codigo fuente
+      # Step 1: Obtenemos el código fuente
       - checkout
-      # Step 2: creamos venv e instalamos dependencias
+
+      # Step 2: Limpiamos el entorno virtual y creamos uno nuevo
       - run:
-          name: install dependencies
+          name: Remove existing venv
+          command: rm -rf venv
+
+      - run:
+          name: Create and activate venv, install dependencies
           command: |
             python3 -m venv venv
             source venv/bin/activate
+            pip install --upgrade pip
             pip install -r requirements.txt
-      # Step 3: ejecutamos linters y flake8 y lanzamos casos de prueba
+
+      # Step 3: Actualizamos pytest y py para evitar problemas de compatibilidad
       - run:
-          name: run tests
+          name: Install latest pytest and py
+          command: |
+            source venv/bin/activate
+            pip install --upgrade pytest py
+
+      # Step 4: Ejecutamos linters y pruebas
+      - run:
+          name: Run flake8 and pytest
           command: |
             source venv/bin/activate
             flake8 --exclude=venv* --statistics
             pytest -v
+
+      # Step 5: Docker build and push (opcional, descomenta si es necesario)
 #      - setup_remote_docker:
 #          docker_layer_caching: true
-      # Step 4: Docker build
-      - run:
-          name: Build and Push Docker
-          command: |
-            source venv/bin/activate
-            #docker build -t poc/$IMAGE_NAME:$TAG .
-            #echo $DOCKER_PWD | docker login -u $DOCKER_LOGIN --password-stdin
-            #docker push ideaslocas/$IMAGE_NAME:$TAG
+#      - run:
+#          name: Build and Push Docker
+#          command: |
+#            source venv/bin/activate
+#            docker build -t poc/$IMAGE_NAME:$TAG .
+#            echo $DOCKER_PWD | docker login -u $DOCKER_LOGIN --password-stdin
+#            docker push ideaslocas/$IMAGE_NAME:$TAG
